src/test/deca/codegen/valid/created/demo.ass
	TSTO #9
	BOV pile_pleine
	ADDSP #6
; start main program
; Construction des tables des méthodes
; Construction de la table des méthodes de Object
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD code.Object.equals, R0
	STORE R0, 2(GB)
; Construction de la table des méthodes de A
	LEA 1(GB), R0
	STORE R0, 3(GB)
	LOAD code.Object.equals, R0
	STORE R0, 4(GB)
	LOAD code.A.getX, R0
	STORE R0, 5(GB)
; Main program
; new ligne 15
	NEW #2, R2
	BOV tas_plein
	LEA 3(GB), R0
	STORE R0, 0(R2)
	PUSH R2
	BSR init.A
	POP R2
	STORE R2, 6(GB)
; Beginning of main instructions:
	WSTR "le résultat attendu est 5."
	WNL
	WSTR " les résultat obtenu est :"
; Appel de méthode ligne 19
	ADDSP #1
	LOAD 6(GB), R2
	STORE R2, 0(SP)
	LOAD 0(SP), R2
	CMP #null, R2
	BEQ dereferencement.null
	LOAD 0(R2), R2
	BSR 2(R2)
	SUBSP #1
	LOAD R0, R2
	LOAD R2, R1
	WINT
	WNL
	HALT
; Classe Object
; ---------- Code de la méthode equals dans la classe Object (built in)
code.Object.equals:
	LOAD -2(LB), R1
	CMP -3(LB), R1
	SEQ R0
	RTS
; Classe A
; ---------- Initialisation des champs de A
init.A:
	TSTO #1
	BOV pile_pleine
	PUSH R2
	LOAD -2(LB), R1
	LOAD #0, R0
	STORE R0, 1(R1)
	LOAD #5, R2
	LOAD -2(LB), R1
	STORE R2, 1(R1)
	POP R2
	RTS
; ---------- Code de la methode getX dans la classe A ligne 9
code.A.getX:
	TSTO #1
	BOV pile_pleine
; Sauvegarde des registres
	PUSH R2
	LOAD -2(LB), R2
	CMP #null, R2
	BEQ dereferencement.null
	LOAD 1(R2), R2
	LOAD R2, R0
	BRA fin.A.getX
	WSTR "Erreur : sortie de la méthode sans return"
	WNL
	ERROR
fin.A.getX:
	POP R2
	RTS
; Erreurs
pile_pleine:
	WSTR "Erreur : pile_pleine"
	WNL
	ERROR
dereferencement.null:
	WSTR "Erreur : dereferencement.null"
	WNL
	ERROR
tas_plein:
	WSTR "Erreur : tas_plein"
	WNL
	ERROR
; end main program
